# cmake-c-template

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/src/: main.c
include/myproject/: defines.h  foo.h  pch.h
src/: foo.c  pch.c
tests/: CMakeLists.txt
tests/src/: main.c
